<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mustard"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:text="@string/add_recipe_details"
        android:textSize="25sp"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/recipe_title_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/enter_title"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/recipe_author_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/enter_author_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/recipe_ingredients_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/enter_ingredients"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/recipe_instructions_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="@string/enter_instructions"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_recipe"
        android:layout_margin="5dp"/>

    <Button
        android:id="@+id/view_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_recipes"
        android:layout_margin="5dp"/>
</LinearLayout>